--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div class="body-background-color">
-        <img src="/img/banner/background-banner.svg" alt="">
-
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-13.705 0 513.705 369.447">
+            <path style="stroke: rgb(79, 230, 183); fill: rgb(79, 230, 183); fill-opacity: 0.1; stroke-opacity: 0.1;" d="M 5.872 -1.537 C -31.444 95.904 25.896 206.81 183.31 206.192 C 285.842 205.789 324.298 229.7 342.714 270.388 C 386.836 367.869 436.964 358.583 499.956 366.321 C 499.956 366.321 498.399 0.784 498.512 1.348 C 498.625 1.912 9.564 -0.789 5.872 -1.537 Z"/>
+          </svg>
     </div>
     <header class="header">
         <div class="container">
@@ -21,11 +22,13 @@
                 <div class="container-fluid">
                     <a class="homelogo" href="#">
                         
-                        <img  src="/img/logo/Vertex.png" alt="">
+                        <img  src="/img/Vertex.png" alt="">
                         <span class="home_trademark">Vertex</span>
                     </a>    
                     <button class="navbar-toggler" style="box-shadow: none;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <img style="width: 24px;" src="/img/icon/toggler-icon.svg" alt="">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" style="width: 24px;">
+                            <path stroke="#52bdf2" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"></path>
+                        </svg>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
